# python-project-83

./: .env.docker  .gitignore  Dockerfile  Makefile  Procfile  README.md  database.sql  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: linter.yml  main.yml
page_analyzer/: .env  __init__ 2.py  app.py  checks_request.py  connected.py  db.py  models.py  routes 2.py  routes.py  settings 2.py  test.py  testing.py  validate 2.py  validate.py
page_analyzer/models/: database_tools.py
page_analyzer/templates/: error.html  index.html  url_id.html  urls.html
